--- a/src/fly.toml
+++ b/src/fly.toml
@@ -1,7 +1,3 @@
-[
-mounts
-]
-
-source = "pg_data"
-
-destination = "/var/lib/postgresql/data"
+[mounts]
+  source = "pg_data"
+  destination = "/var/lib/postgresql/data"
