--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
+    "@types/node": "^22.13.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.2.0",
+    "koa": "^2.15.4",
+    "mysql": "^2.18.1",
     "pg": "^8.13.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -23,16 +28,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/express": "^5.0.0",
+    "@types/koa": "^2.15.0",
+    "@types/mysql": "^2.15.26",
     "@types/pg": "^8.11.11",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.1.0"
   }
 }
