--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "pg": "^8.13.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
@@ -34,6 +35,7 @@
     "@types/mysql": "^2.15.26",
     "@types/pg": "^8.11.11",
     "@types/react": "^18.3.18",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^9.17.0",
